# rust-cpython

./: .gitignore  Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
extensions/hello/: Cargo.toml  build.rs  generated.rs
extensions/hello/src/: hello.rs
extensions/tests/: Makefile
